--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "nodemon src/index.js"
+        "start": "node src/index.js",
+        "dev": "nodemon src/index.js",
+        "debug": "node --inspect src/index.js"
     },
     "keywords": [],
-    "author": "",
+    "author": "Sirius Deis",
     "license": "ISC",
     "dependencies": {
         "bcrypt": "^5.1.0",
         "chalk": "^4.1.2",
+        "compression": "^1.7.4",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
@@ -21,7 +24,8 @@
         "helmet": "^7.0.0",
         "jsonwebtoken": "^9.0.0",
         "morgan": "^1.10.0",
-        "mysql2": "^3.3.1"
+        "mysql2": "^3.3.1",
+        "sequelize": "^6.31.1"
     },
     "devDependencies": {
         "nodemon": "^2.0.22"
