--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "morgan": "^1.10.0",
         "mysql2": "^3.3.1",
         "nodemailer": "^6.9.2",
+        "nodemailer-express-handlebars": "^6.1.0",
         "sequelize": "^6.31.1"
     },
     "devDependencies": {
