--- a/package.json
+++ b/package.json
@@ -1,36 +1,51 @@
 {
-    "name": "chato-api",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node src/index.js",
-        "dev": "nodemon src/index.js",
-        "debug": "node --inspect src/index.js"
-    },
-    "keywords": [],
-    "author": "Sirius Deis",
-    "license": "ISC",
-    "dependencies": {
-        "bcrypt": "^5.1.0",
-        "chalk": "^4.1.2",
-        "compression": "^1.7.4",
-        "cookie-parser": "^1.4.6",
-        "cors": "^2.8.5",
-        "dotenv": "^16.0.3",
-        "express": "^4.18.2",
-        "express-rate-limit": "^6.7.0",
-        "express-validator": "^7.0.1",
-        "helmet": "^7.0.0",
-        "jsonwebtoken": "^9.0.0",
-        "morgan": "^1.10.0",
-        "mysql2": "^3.3.1",
-        "nodemailer": "^6.9.2",
-        "nodemailer-express-handlebars": "^6.1.0",
-        "sequelize": "^6.31.1"
-    },
-    "devDependencies": {
-        "nodemon": "^2.0.22"
-    }
+  "name": "chato-api",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "debug": "node --inspect src/server.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix"
+  },
+  "keywords": [],
+  "author": "Sirius Deis",
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "chalk": "^4.1.2",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.0.0",
+    "html-to-text": "^9.0.5",
+    "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
+    "mysql2": "^3.3.1",
+    "nodemailer": "^6.9.2",
+    "nodemailer-express-handlebars": "^6.1.0",
+    "sequelize": "^6.31.1",
+    "socket.io": "^4.6.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.41.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
+    "prettier": "^2.8.8",
+    "supertest": "^6.3.3"
+  },
+  "engines": {
+    "node": "19.x"
+  }
 }
