replace my own logger with winston

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,14 @@
     "es2021": true
   },
   "extends": ["eslint:recommended", "plugin:node/recommended", "prettier", "airbnb"],
-  "overrides": [],
+  "overrides": [
+    {
+      "files": "./src/__tests__/*.test.js",
+      "env": {
+        "jest": true
+      }
+    }
+  ],
   "parserOptions": {
     "ecmaVersion": "latest"
   },
@@ -13,8 +20,15 @@
     "spaced-comment": "off",
     "no-console": "warn",
     "consistent-return": "off",
+    "func-names": "off",
+    "object-shorthand": "off",
     "no-process-exit": "off",
     "no-param-reassign": "off",
+    "no-return-await": "off",
+    "no-underscore-dangle": "off",
+    "operator-linebreak": "off",
+    "object-curly-newline": "off",
+    "implicit-arrow-linebreak": "off",
     "prefer-destructuring": [
       "error",
       {
@@ -22,6 +36,9 @@
         "array": false
       }
     ],
+    "semi": "error",
+    "camelcase": "error",
+    "comma-spacing": "warn",
     "no-unused-vars": [
       "error",
       {
