--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "chalk": "^4.1.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -33,8 +32,10 @@
     "mysql2": "^3.3.1",
     "nodemailer": "^6.9.2",
     "nodemailer-express-handlebars": "^6.1.0",
+    "redis": "^4.6.7",
     "sequelize": "^6.31.1",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "winston": "^3.9.0"
   },
   "devDependencies": {
     "eslint": "^8.41.0",
