add first test for /signup route to test if fields are empty

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,7 +42,7 @@
     "no-unused-vars": [
       "error",
       {
-        "argsIgnorePattern": "req|res|next"
+        "argsIgnorePattern": "req|res|next|_"
       }
     ]
   },
