--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "chatoron-api",
+  "name": "chatty-pal-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "pretest": "ACTION=create node ./src/__tests__/config.js",
     "test": "jest",
+    "posttest": "ACTION=drop node ./src/__tests__/config.js",
     "test:w": "jest --w",
     "coverage": "jest - --coverage",
     "start": "node src/server.js",
