--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "pretest": "ACTION=create node ./src/__tests__/config.js",
-    "test": "jest",
+    "test": "DB_SCHEMA=test_db NODE_ENV=test jest",
     "posttest": "ACTION=drop node ./src/__tests__/config.js",
     "test:w": "jest --w",
     "coverage": "jest - --coverage",
