--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.1",
     "nodemailer": "^6.9.2",
     "nodemailer-express-handlebars": "^6.1.0",
     "redis": "^4.6.7",
     "sequelize": "^6.31.1",
+    "sharp": "^0.32.1",
     "socket.io": "^4.6.1",
     "winston": "^3.9.0"
   },
